--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,19 @@
 .main {
     padding: '30px 30px',
-  }
+}
+
+body {
+    padding: 0;
+    margin: 0 auto;
+    font-family: "Nunito Sans";
+    background-color: #FBFBFB;
+}
+  
+::-webkit-scrollbar {
+    display: none;
+}
+  
+* {
+    box-sizing: border-box;
+}
+  
