--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,18 +1,17 @@
 .main {
-    padding: '30px 30px',
+  padding: '30px 30px';
 }
 
 body {
-    padding: 0;
-    margin: 0 auto;
-    font-family: "Nunito Sans";
+  padding: 0;
+  margin: 0 auto;
+  font-family: 'Nunito Sans';
 }
-  
+
 ::-webkit-scrollbar {
-    display: none;
+  display: none;
 }
-  
+
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
-  
